@@ -1181,7 +1181,7 @@ contains the factory method, since the test instances themselves will be created
 at runtime:</p>
 
 <pre class="prettyprint">
-<class name="WebTestFactory" />
+&lt;class name="WebTestFactory" /&gt;
 </pre>
 
 <p>The factory method can receive parameters just like <tt>@Test</tt> and <tt>@Before/After</tt> and it must return <tt>Object[]</tt>.&nbsp; 
