@@ -1,0 +1,34 @@
+.prettyprint .kwd, .tag {
+  font-weight: bold;
+  color: #7f0055;
+}
+
+.prettyprint .str,.atv {
+  color: #0000cc;
+}
+
+.prettyprint .com {
+  color: #008800;
+}
+
+.prettyprint .lit {
+  color: #cc2222;
+  font-weight: bold;
+}
+
+
+pre.prettyprint { padding: 2px; border: 1px solid #888; }
+
+@media print {
+  .str { color: #060; }
+  .kwd { color: #006; font-weight: bold; }
+  .com { color: #600; font-style: italic; }
+  .typ { color: #404; font-weight: bold; }
+  .lit { color: #044; }
+  .pun { color: #440; }
+  .pln { color: #000; }
+  .tag { color: #006; font-weight: bold; }
+  .atn { color: #404; }
+  .atv { color: #060; }
+}
+
