@@ -1,6 +1,6 @@
 <!DOCTYPE suite SYSTEM "http://beust.com/testng/testng-1.0.dtd" >
   
-<suite name="Single" verbose="3" parallel="false" thread-count="2" >
+<suite name="Single" verbose="1" parallel="false" thread-count="2" >
   
   <test name="TestSingle">
 <!--
