@@ -6,6 +6,7 @@ TODO
 ===========================================================================
 5.2
 
+Added: Command line understands @ syntax
 Added: JUnitConverter uses the new syntax
 Added: -groups to JUnitConverter
 Fixed: Throw proper exception when a DataProvider declares parameters
